# autorepo

./: LICENSE  Pipfile  README.md  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
autorepo/: __init__.py
autorepo/commands/: __init__.py  auth.py  list.py  repo.py
autorepo/utils/: __init__.py  auth.py  config.py  list.py  repo.py
src/autorepo/: __init__.py  __main__.py  main.py
src/autorepo/commands/: __init__.py  auth.py  list.py  repo.py
src/autorepo/utils/: __init__.py  keyring_utils.py  list.py  repo.py  repo_utils.py
utils/: listUtils.py  login.py  repoUtils.py
